--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,26 @@
 <!doctype html>
 <html lang='en'>
 
-	<head>
+<head>
 
-		<meta charset='utf-8'>
-		<title>ppabli | Portfolio</title>
-		<base href='/'>
-		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<link rel='icon' type='image/x-icon' href='favicon.ico'>
+	<meta charset='utf-8'>
+	<title>ppabli | Portfolio</title>
+	<base href='/'>
+	<meta name='viewport' content='width=device-width, initial-scale=1'>
+	<link rel='icon' type='image/x-icon' href='favicon.ico'>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+		integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-	</head>
+</head>
 
-	<body>
+<body>
 
-		<app-root>
+	<app-root>
 
 
 
-		</app-root>
+	</app-root>
 
-	</body>
+</body>
 
 </html>
