--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
 	<meta name='viewport' content='width=device-width, initial-scale=1'>
 	<link rel='icon' type='image/x-icon' href='favicon.ico'>
 
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8229946226103801" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
