--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,14 @@
 
 	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8229946226103801" crossorigin="anonymous"></script>
 
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-H5HZR97M4B"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'G-H5HZR97M4B');
+	</script>
+
 </head>
 
 <body>
